completed Week 1 Pass Task 1 - Create an HTML Page

--- a/Week_1/index.html
+++ b/Week_1/index.html
@@ -12,7 +12,11 @@
     <p>Cameron Malone: 218344989</p>
     <div>
       <p>This is some text next to a photograph</p>
-      <img src="#" alt="#" />
+      <img
+        src="./forest.jpg"
+        alt="image of forest and mountains"
+        width="200px"
+      />
     </div>
     <h2>This is a form</h2>
     <form action="#">
