--- a/Week_1/index.html
+++ b/Week_1/index.html
@@ -5,6 +5,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Adding External Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=EB+Garamond&family=Oswald&display=swap"
+      rel="stylesheet"
+    />
     <title>Task 1</title>
   </head>
   <body>
@@ -14,7 +21,7 @@
       <p>This is some text next to a photograph</p>
       <img
         src="./forest.jpg"
-        alt="image of forest and mountains"
+        alt="image of forest and mountains, source: https://unsplash.com/photos/bbe79lwBzK0"
         width="200px"
       />
     </div>
