Changed page title and added inline font styling to header

--- a/Week_1/index.html
+++ b/Week_1/index.html
@@ -12,10 +12,11 @@
       href="https://fonts.googleapis.com/css2?family=EB+Garamond&family=Oswald&display=swap"
       rel="stylesheet"
     />
-    <title>Task 1</title>
+    <title>Week 1</title>
   </head>
   <body>
-    <h1>Cameron's HTML Page</h1>
+    <!-- Inline CSS -->
+    <h1 style="font-family: 'Oswald', sans-serif">Cameron's HTML Page</h1>
     <p>Cameron Malone: 218344989</p>
     <div>
       <p>This is some text next to a photograph</p>
