added more inline font styling

--- a/Week_1/index.html
+++ b/Week_1/index.html
@@ -17,9 +17,16 @@
   <body>
     <!-- Inline CSS -->
     <h1 style="font-family: 'Oswald', sans-serif">Cameron's HTML Page</h1>
-    <p>Cameron Malone: 218344989</p>
+    <p style="font-family: 'EB Garamond', serif">Cameron Malone: 218344989</p>
     <div>
-      <p>This is some text next to a photograph</p>
+      <p style="font-family: 'EB Garamond', serif">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate
+        officia libero aut similique, accusantium illum laudantium labore
+        ratione possimus totam ad praesentium in! Nihil, quaerat nam. Dolore
+        ipsam sequi similique architecto ad error quo dolor dignissimos ut iusto
+        veritatis doloremque doloribus, vero nulla eius debitis incidunt quos
+        necessitatibus recusandae? Minus?
+      </p>
       <img
         src="./forest.jpg"
         alt="image of forest and mountains, source: https://unsplash.com/photos/bbe79lwBzK0"
