added internal css styling to h2 elements with the style tag

--- a/Week_1/index.html
+++ b/Week_1/index.html
@@ -58,5 +58,10 @@
         <td>+6142069720</td>
       </tr>
     </table>
+    <style>
+      h2 {
+        font-family: "Oswald", sans-serif;
+      }
+    </style>
   </body>
 </html>
