--- a/Week_1/index.html
+++ b/Week_1/index.html
@@ -12,6 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=EB+Garamond&family=Oswald&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="styles.css" />
     <title>Week 1</title>
   </head>
   <body>
