--- a/Week_1/index.html
+++ b/Week_1/index.html
@@ -17,9 +17,11 @@
   </head>
   <body>
     <!-- Inline CSS -->
-    <h1 style="font-family: 'Oswald', sans-serif">Cameron's HTML Page</h1>
-    <p style="font-family: 'EB Garamond', serif">Cameron Malone: 218344989</p>
-    <div>
+    <header>
+      <h1 style="font-family: 'Oswald', sans-serif">Cameron's HTML Page</h1>
+      <p style="font-family: 'EB Garamond', serif">Cameron Malone: 218344989</p>
+    </header>
+    <div class="image-hero">
       <p style="font-family: 'EB Garamond', serif">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate
         officia libero aut similique, accusantium illum laudantium labore
@@ -34,31 +36,35 @@
         width="200px"
       />
     </div>
-    <h2>This is a form</h2>
-    <form action="#">
-      <label for="firstname">First Name:</label><br />
-      <input type="text" name="firstname" id="fname" /><br />
-      <label for="email">Email Address:</label><br />
-      <input type="email" name="email" id="emailinput" />
-    </form>
-    <h2>This is a table</h2>
-    <table>
-      <tr>
-        <th>Name</th>
-        <th>Address</th>
-        <th>Phone Number</th>
-      </tr>
-      <tr>
-        <td>Jason Alexander</td>
-        <td>7 Perfect Avenue, Olympus</td>
-        <td>+341221212</td>
-      </tr>
-      <tr>
-        <td>Missy Mississippi</td>
-        <td>The Bay</td>
-        <td>+6142069720</td>
-      </tr>
-    </table>
+    <div class="form-wrapper">
+      <h2>This is a form</h2>
+      <form action="#">
+        <label for="firstname">First Name:</label><br />
+        <input type="text" name="firstname" id="fname" /><br />
+        <label for="email">Email Address:</label><br />
+        <input type="email" name="email" id="emailinput" />
+      </form>
+    </div>
+    <div class="table-wrapper">
+      <h2>This is a table</h2>
+      <table>
+        <tr>
+          <th>Name</th>
+          <th>Address</th>
+          <th>Phone Number</th>
+        </tr>
+        <tr>
+          <td>Jason Alexander</td>
+          <td>7 Perfect Avenue, Olympus</td>
+          <td>+341221212</td>
+        </tr>
+        <tr>
+          <td>Missy Mississippi</td>
+          <td>The Bay</td>
+          <td>+6142069720</td>
+        </tr>
+      </table>
+    </div>
     <style>
       h2 {
         font-family: "Oswald", sans-serif;
