added header styling in style.css

--- a/Week_1/index.html
+++ b/Week_1/index.html
@@ -17,9 +17,12 @@
   </head>
   <body>
     <!-- Inline CSS -->
-    <header>
+    <header class="header-main">
       <h1 style="font-family: 'Oswald', sans-serif">Cameron's HTML Page</h1>
-      <p style="font-family: 'EB Garamond', serif">Cameron Malone: 218344989</p>
+      <p style="font-family: 'EB Garamond', serif">
+        Cameron Malone: 218344989 <br />
+        for SIT120
+      </p>
     </header>
     <div class="image-hero">
       <p style="font-family: 'EB Garamond', serif">
