added hero background

--- a/Week_1/index.html
+++ b/Week_1/index.html
@@ -18,7 +18,9 @@
   <body>
     <!-- Inline CSS -->
     <header class="header-main">
-      <h1 style="font-family: 'Oswald', sans-serif">Cameron's HTML Page</h1>
+      <h1 style="font-family: 'Oswald', sans-serif">
+        Cameron's Basic HTML Page
+      </h1>
       <p style="font-family: 'EB Garamond', serif">
         Cameron Malone: 218344989 <br />
         for SIT120
