added general footer spacing and table styling

--- a/Week_1/index.html
+++ b/Week_1/index.html
@@ -41,34 +41,41 @@
         width="200px"
       />
     </div>
-    <div class="form-wrapper">
-      <h2>This is a form</h2>
-      <form action="#">
-        <label for="firstname">First Name:</label><br />
-        <input type="text" name="firstname" id="fname" /><br />
-        <label for="email">Email Address:</label><br />
-        <input type="email" name="email" id="emailinput" />
-      </form>
-    </div>
-    <div class="table-wrapper">
-      <h2>This is a table</h2>
-      <table>
-        <tr>
-          <th>Name</th>
-          <th>Address</th>
-          <th>Phone Number</th>
-        </tr>
-        <tr>
-          <td>Jason Alexander</td>
-          <td>7 Perfect Avenue, Olympus</td>
-          <td>+341221212</td>
-        </tr>
-        <tr>
-          <td>Missy Mississippi</td>
-          <td>The Bay</td>
-          <td>+6142069720</td>
-        </tr>
-      </table>
+    <div class="footer-wrapper">
+      <div class="form-wrapper">
+        <h2>This is a form</h2>
+        <form action="#">
+          <label for="firstname">First Name:</label><br />
+          <input type="text" name="firstname" id="fname" /><br />
+          <label for="email">Email Address:</label><br />
+          <input type="email" name="email" id="emailinput" />
+        </form>
+      </div>
+      <div class="table-wrapper">
+        <h2>This is a table</h2>
+        <table>
+          <tr>
+            <th>Name</th>
+            <th>Address</th>
+            <th>Phone Number</th>
+          </tr>
+          <tr>
+            <td>Jason Alexander</td>
+            <td>7 Perfect Avenue, Olympus</td>
+            <td>+341221212</td>
+          </tr>
+          <tr>
+            <td>Missy Mississippi</td>
+            <td>The Bay</td>
+            <td>+6142069720</td>
+          </tr>
+          <tr>
+            <td>Jimmy Jameson</td>
+            <td>Swarzchild Way</td>
+            <td>+100268830</td>
+          </tr>
+        </table>
+      </div>
     </div>
     <style>
       h2 {
