added form styling and some text decoration to header and hero paragraph

--- a/Week_1/index.html
+++ b/Week_1/index.html
@@ -28,12 +28,14 @@
     </header>
     <div class="image-hero">
       <p style="font-family: 'EB Garamond', serif">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate
-        officia libero aut similique, accusantium illum laudantium labore
-        ratione possimus totam ad praesentium in! Nihil, quaerat nam. Dolore
-        ipsam sequi similique architecto ad error quo dolor dignissimos ut iusto
-        veritatis doloremque doloribus, vero nulla eius debitis incidunt quos
-        necessitatibus recusandae? Minus?
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+        <em
+          >Voluptate officia libero aut similique, accusantium illum laudantium
+          labore ratione possimus totam ad praesentium in!</em
+        >
+        Nihil, quaerat nam. Dolore ipsam sequi similique architecto ad error quo
+        dolor dignissimos ut iusto veritatis doloremque doloribus, vero nulla
+        eius debitis incidunt quos necessitatibus recusandae? Minus?
       </p>
       <img
         src="./forest.jpg"
