added html elements and styling for interactive JS date button

--- a/Week_1/index.html
+++ b/Week_1/index.html
@@ -78,6 +78,11 @@
           </tr>
         </table>
       </div>
+      <div id="date-wrapper">
+        <h2>JS Date Button</h2>
+        <button id="date-button">Get the date!</button>
+        <p id="date-text">bla</p>
+      </div>
     </div>
     <style>
       h2 {
