--- a/Week_1/index.html
+++ b/Week_1/index.html
@@ -14,6 +14,7 @@
     />
     <link rel="stylesheet" href="styles.css" />
     <title>Week 1</title>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.7.4/dist/vue.js"></script>
   </head>
   <body>
     <!-- Inline CSS -->
@@ -84,11 +85,20 @@
         <p id="date-text">bla</p>
       </div>
     </div>
+
+    <!-- This begins our vue section -->
+    <div class="vue-wrapper">
+      <h2>Vue App</h2>
+      <div id="app"></div>
+    </div>
+
+    <!-- Internal Styles -->
     <style>
       h2 {
         font-family: "Oswald", sans-serif;
       }
     </style>
+    <!-- Internal JS -->
     <script>
       getDate = () => {
         const date = new Date();
